[project]
name = "my_history"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "DONGUK777", email = "kimdongyork@gmail.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
cnt = 'my_history.cli:cnt'

[tool.pdm]
distribution = true
